# sparse-vocab-encoder

./: README.md  pyproject.toml  spec-semantic-tagger.md
semantic_tagger/: __init__.py  encoder.py  tagger.py  types.py  vocab.py
semantic_tagger/adapters/: base.py  claude.py  gemini_embed.py  openai_chat.py  openai_embed.py
tests/: test_claude_adapter.py  test_encoder.py  test_tagger.py  test_vocab.py
