[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-tagger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
claude = ["anthropic>=0.25"]
dev = ["pytest", "pytest-asyncio", "openai>=1.0", "anthropic>=0.25"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["semantic_tagger"]
